fixed nav link alignment

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -204,7 +204,7 @@ nav {
 
   .main-nav-link {
     position: relative;
-    top: -50px;
+    top: -20px;
   }
 }
 
